--- a/Wikipedia-Kaggle_ETL.ipynb
+++ b/Wikipedia-Kaggle_ETL.ipynb
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "98a9a05d",
+   "id": "c944114c",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4c7b96f8",
+   "id": "6aac52c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1b4c8a6e",
+   "id": "87134a1d",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f2077448",
+   "id": "f8dd9204",
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6a1d2339",
+   "id": "65694280",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7c61cedf",
+   "id": "b0409799",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "acd20ca2",
+   "id": "71136cba",
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f511cdd7",
+   "id": "682f1a02",
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "38911665",
+   "id": "d2262b62",
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0f6ebce1",
+   "id": "3cc447ae",
    "metadata": {},
    "outputs": [
     {
@@ -1882,7 +1882,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a44f4224",
+   "id": "f5db22f3",
    "metadata": {},
    "outputs": [
     {
@@ -1929,7 +1929,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b5dfdf76",
+   "id": "ed46edd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1940,7 +1940,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fc963005",
+   "id": "98c734f2",
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1979,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a2181470",
+   "id": "1df5bd7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1990,8 +1990,174 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "117c1b9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "form_one = r\"\\$\\d+\\.?\\d*\\s*[mb]illion\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "50618a10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3896"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box_office.str.contains(form_one, flags=re.IGNORECASE).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5303c728",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "form_two = r\"\\$\\d{1,3}(?:,\\d{3})+\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cc854161",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1544"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box_office.str.contains(form_two, flags=re.IGNORECASE).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "1ad9eb3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34                         US$ 4,212,828\n",
+       "79                              $335.000\n",
+       "110                   $4.35-4.37 million\n",
+       "130                        US$ 4,803,039\n",
+       "600                           $5000 (US)\n",
+       "731                         $ 11,146,270\n",
+       "957                             $ 50,004\n",
+       "1070                          35,254,617\n",
+       "1147    $ 407,618 (U.S.) (sub-total) [1]\n",
+       "1446                        $ 11,829,959\n",
+       "1480                          £3 million\n",
+       "1611                            $520.000\n",
+       "1865                        ¥1.1 billion\n",
+       "2032                                 N/A\n",
+       "2091                                $309\n",
+       "2130               US$ 171.8 million [9]\n",
+       "2257                   US$ 3,395,581 [1]\n",
+       "2263            $ 1,223,034 ( domestic )\n",
+       "2347                            $282.175\n",
+       "2638            $ 104,883 (US sub-total)\n",
+       "2665         926,423 admissions (France)\n",
+       "2697      $ 1.7 million (US) (sub-total)\n",
+       "2823                            $414.000\n",
+       "2924                            $621.000\n",
+       "3088           $32 [2] –33.1 million [1]\n",
+       "3631                                 TBA\n",
+       "3859                  $38.9–40.3 million\n",
+       "3879            CN¥3.650 million (China)\n",
+       "4116                          £7,385,434\n",
+       "4123                            $161.000\n",
+       "4261                  $20.7–23.9 million\n",
+       "4306                              $20-30\n",
+       "4492                        $47.7 millon\n",
+       "4561             $45.2k (only in Turkey)\n",
+       "4662                USD$ 8.2 million [2]\n",
+       "5362                   $ 142 million [3]\n",
+       "5447                               £2.56\n",
+       "5784                            413 733$\n",
+       "6013                             Unknown\n",
+       "6145                  $17.5–18.4 million\n",
+       "6234                  $41.8–41.9 million\n",
+       "6369                               $111k\n",
+       "6370                                $588\n",
+       "6593                      less than $372\n",
+       "6829                    $ 41 million [3]\n",
+       "6843                             8 crore\n",
+       "6904                         $6.9 millon\n",
+       "Name: Box office, dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matches_form_one = box_office.str.contains(form_one, flags=re.IGNORECASE)\n",
+    "matches_form_two = box_office.str.contains(form_two, flags=re.IGNORECASE)\n",
+    "\n",
+    "box_office[~matches_form_one & ~matches_form_two]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "019950b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Some values have spaces in between the dollar sign and the number. To fix that, add '\\s*' after the $ sign\n",
+    "form_one = r\"\\$\\s*\\d+\\.?\\d*\\s*[mb]illion\"\n",
+    "form_two = r\"\\$\\s*\\d{1,3}(?:,\\d{3})+\"\n",
+    "\n",
+    "#Some values use a period as a thousands separator, not a comma. To fix that, allow for either a comma or period\n",
+    "#Don't forget escape the period with a \\\n",
+    "form_two = r\"\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+\"\n",
+    "#The results will match values like 1.234 billion, but we want to change raw numbers\n",
+    "#To solve this, dd a negative lookahead group that looks for \"million\" or \"billion\" and rejects the match\n",
+    "form_two = r\"\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)\"\n",
+    "\n",
+    "#Some values are given as a range. To fix that, search for any string that starts with a $ and ends with a -\n",
+    "box_office = box_office.str.replace(r'\\$.*[---](?![a-z])', '$', regex=True)\n",
+    "\n",
+    "#\"Million\" is sometimes mispelled as \"millon\"\n",
+    "form_one = r\"\\$\\s*\\d+\\.?\\d*\\s*[mb]illi?on\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "48b8f14e",
+   "id": "d1d50dbf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed8bbed4",
    "metadata": {},
    "outputs": [],
    "source": []
